--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/chenqiulin/.local/share/virtualenvs/helloflask-jykpGSmg/bin/python"
+    "python.pythonPath": "/home/dx/.local/share/virtualenvs/helloflask-4aGMwd-P/bin/python"
 }
