--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/dx/.local/share/virtualenvs/helloflask-4aGMwd-P/bin/python",
+    "python.pythonPath": "/Users/chenqiulin/.local/share/virtualenvs/helloflask-jykpGSmg/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
